# Aithentica

./: LICENSE.txt  README.md
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/apps/llms/: apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/llms/migrations/: 0001_initial.py  0002_chathistory_delete_usertokenusage.py
backend/apps/users/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/nginx/conf.d/: default.conf
backend/storefront/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  axiosConfig.ts  chat.ts  vision.ts
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Home.tsx  Login.tsx  Register.tsx
frontend/src/router/: AppRouter.tsx
